--- a/client/src/style/style3.css
+++ b/client/src/style/style3.css
@@ -1263,6 +1263,10 @@ a.log-in-btn {
     margin: 0;
 }
 
+.formElement:focus {
+    outline: none;
+}
+
 .loginForgotPasswordWrapper {
     font-size: 12px;
     margin-bottom: 20px;
